@@ -1,3 +1,10 @@
+2006-06-26  Sven Herzberg  <herzi@gnome-de.org>
+
+	* src/ui/eggcellrendererkeys.c,
+	* src/ui/ui-network-client.c,
+	* src/ui/ui-network-server.c: fixed gcc 4.1 warnings (patch from
+	Michael J. Knox)
+
 2006-06-21  Raivis Dejus  <orvils@gmail.com>
 
 	* configure.in	Added lv in ALL_LINGUAS line.
